--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 DUBLIN, CA 94568"/>
 <meta name="data-map" content="2363+AMANTEA+WAY,+DUBLIN,+CA+94568"/>
   <meta name="description" content="We are a 501(c)(3) organization advancing education access and enrichment through transparent programs, local partnerships, and measurable outcomes.">
+<meta name="facebook-domain-verification" content="kud08zedpdk0yqafnne3i6oerpfsyo" />
 </head><body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
   <span>We are a 501(c)(3) organization advancing education access and enrichment through transparent programs, local partnerships, and measurable outcomes.</span><svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><circle cx="6" cy="6" r="5" fill="#047857"/></svg><img src="images/land.jpg" width="1" height="1" alt="" loading="lazy"/>
